--- a/lamda-to-s3/LambdaToS3/pom.xml
+++ b/lamda-to-s3/LambdaToS3/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.bskyb.aws.poc</groupId>
+    <groupId>com.bskyb.aws.lambda</groupId>
     <artifactId>lambda-to-s3</artifactId>
     <version>0.0.1</version>
 
     <packaging>jar</packaging>
-    <name>Poc for lambda to s3</name>
+    <name>lambda-to-s3</name>
 
     <properties>
         <!-- Build Dependencies -->
