aws pseudo parameters

--- a/lambdahelloworld/template.yaml
+++ b/lambdahelloworld/template.yaml
@@ -24,16 +24,20 @@ Resources:
           LOG_LEVEL: DEBUG
           Q_PROFILE: local
 
-#Outputs:
-#  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-#  # Find out more about other implicit resources you can reference within SAM
-#  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-#  HelloWorldApi:
-#    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-#    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-#  HelloWorldFunction:
-#    Description: "Hello World Lambda Function ARN"
-#    Value: !GetAtt HelloWorldFunction.Arn
-#  HelloWorldFunctionIamRole:
-#    Description: "Implicit IAM Role created for Hello World function"
-#    Value: !GetAtt HelloWorldFunctionRole.Arn
+Outputs:
+  HelloWorldFunction:
+    Description: "Hello World Lambda Function ARN"
+    Value: !GetAtt HelloWorldFunction.Arn
+  HelloWorldFunctionIamRole:
+    Description: "Implicit IAM Role created for Hello World function"
+    Value: !GetAtt HelloWorldFunctionRole.Arn
+  HelloWorldPseudoParameters:
+    Description: Pseudo parameter output value
+    Value: !Join
+      - ',  '
+      - - !Ref AWS::Region
+        - !Ref AWS::Region
+#        - 'Account: ' !Ref AWS::AccountId
+#        - 'StackName: ' !Ref AWS::StackName
+
+
