--- a/orelly/HelloPojo/template.yaml
+++ b/orelly/HelloPojo/template.yaml
@@ -1,14 +1,14 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
-Description: HelloWorldLambdaJava
+Description: HelloPojo
 
 Resources:
 
   HelloWorldLambda:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: HelloWorldJava
+      FunctionName: HelloPojo
       Runtime: java8
       MemorySize: 512
-      Handler: com.bskyb.aws.lambda.HelloWorld::handlerPojo
+      Handler: com.bskyb.aws.lambda.HelloPojo::handler
       CodeUri: target/lambda.jar
