some issue with private s3 function sorted

--- a/javalambdatoprivates3/template.yaml
+++ b/javalambdatoprivates3/template.yaml
@@ -13,7 +13,7 @@ Parameters:
   FunctionName:
     Type: String
     Default: js-lambda-to-private-s3
-    Description: Name of lambda function
+    Description: Lambda function to write to private s3 bucket
 
 Resources:
   ResultsS3Bucket:
